Added HTML tags

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE HTML>
+<HTML>
+   <HEAD>
+        <TITLE> Hello World Title!</TITLE>
+   </HEAD>
+
+   <BODY>
+      Hello World!
+   </BODY>
+</HTML>
+
+Predefined HTML elements in red: HTML,HEAD,TITLE,BODY
