Changed title, added heading, and added paragraphs.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
+Hello World
 <!DOCTYPE HTML>
 <HTML>
    <HEAD>
-        <TITLE> Hello World Title!</TITLE>
+        <TITLE> Yao-Ting Yao</TITLE>
    </HEAD>
 
    <BODY>
-      Hello World!
+      <h1>Hello,my name is Yao-Ting Yao!</h1>
+      <p>Welcome to my webpage.</p> 
    </BODY>
 </HTML>
-
-Predefined HTML elements in red: HTML,HEAD,TITLE,BODY
