Made images directory, uploaded profile-picture.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Hello World
 <!DOCTYPE HTML>
 <HTML>
    <HEAD>
@@ -7,6 +6,8 @@ Hello World
 
    <BODY>
       <h1>Hello,my name is Yao-Ting Yao!</h1>
-      <p>Welcome to my webpage.</p> 
+      <p>Welcome to my webpage.</p>
+      <img src="E:/web_mappingc/yaotingyao.github.io/images/profile-picture.jpg", width="500px", height="600px">
+
    </BODY>
 </HTML>
