Added profile image to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
    <BODY>
       <h1>Hello,my name is Yao-Ting Yao!</h1>
+      <img src=images/profile-picture.jpg width=500px height=500px />
       <p>Welcome to my webpage.</p>
-      <img src="E:/web_mappingc/yaotingyao.github.io/images/profile-picture.jpg", width="500px", height="600px">
 
    </BODY>
 </HTML>
