--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
    <BODY>
       <h1>Hello,my name is Yao-Ting Yao!</h1>
-      <img src=images/profile-picture.jpg width=500px height=500px />
+      <img src="images/profile-picture.jpg" width="500px", height="500px" />
       <p>Welcome to my webpage.</p>
 
    </BODY>
