--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <BODY>
       <h1>Hello,my name is Yao-Ting Yao!</h1>
       <img src="images/profile-picture.jpg" width="500px", height="500px" />
-      <p>Welcome   to my webpage.I am a student in <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at<a href="https://www.clarku.edu/">Clark University</a>.</p>
+      <p>Welcome to my webpage.<br>I am a student in <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at<a href="https://www.clarku.edu/">Clark University</a>.</p>
 
    </BODY>
 </HTML>
