Added research interests.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         I am a student in the
         <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
         <a href="https://www.clarku.edu/">Clark University</a>.</p>
+      <p>Research Interests
+       <ul>
+        <li>Image Classification</li>
+        <li>Deep Learning</li>
+        <li>Spatial Databases</li>
+       </ul>
+      </p>
+
 
    </BODY>
 </HTML>
