--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE HTML>
 <HTML>
-   <HEAD>
-        <TITLE> Yao-Ting Yao</TITLE>
-   </HEAD>
-   <BODY>
-      <h1>Hello,my name is Yao-Ting Yao!</h1>
-      <img src="images/profile-picture.jpg" width="500px", height="500px" />
-      <p>Welcome to my webpage.<br>
-        I am a student in the
-        <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
-        <a href="https://www.clarku.edu/">Clark University</a>.</p>
-      <p>Research Interests
-       <ul>
-        <li>Image Classification</li>
-        <li>Deep Learning</li>
-        <li>Spatial Databases</li>
-       </ul>
-      </p>
-
-
-   </BODY>
+<HEAD>
+  <TITLE> Yao-Ting Yao</TITLE>
+</HEAD>
+<BODY>
+  <h1>Hello,my name is Yao-Ting Yao!</h1>
+  <img src="images/profile-picture.jpg" width="500px", height="500px" />
+  <p>
+    Welcome to my webpage.<br>
+    I am a student in the
+    <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
+    <a href="https://www.clarku.edu/">Clark University</a>.
+  </p>
+  <p>
+    <h3>Research Interests</h3>
+    <ul>
+      <li>Image Classification</li>
+      <li>Deep Learning</li>
+      <li>Spatial Databases</li>
+    </ul>
+  </p>
+</BODY>
 </HTML>
