Added external stylesheet for index.html.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HTML>
 <HEAD>
   <TITLE> Yao-Ting Yao</TITLE>
+  <link rel="stylesheet" type="text/css" href="css/main_style.css">
 </HEAD>
 <BODY>
   <h1>Hello,my name is Yao-Ting Yao!</h1>
