Divided HTML document and added comment about external CSS.

--- a/index.html
+++ b/index.html
@@ -2,24 +2,31 @@
 <HTML>
 <HEAD>
   <TITLE> Yao-Ting Yao</TITLE>
+  <!--All styling for this HTML document are contained in this external css dile-->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
 </HEAD>
 <BODY>
-  <h1>Hello,my name is Yao-Ting Yao!</h1>
-  <img src="images/profile-picture.jpg" width="500px", height="500px" />
-  <p>
-    Welcome to my webpage.<br>
-    I am a student in the
-    <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
-    <a href="https://www.clarku.edu/">Clark University</a>.
-  </p>
-  <p>
-    <h3>Research Interests</h3>
-    <ul>
-      <li>Image Classification</li>
-      <li>Deep Learning</li>
-      <li>Spatial Databases</li>
-    </ul>
-  </p>
+  <div id="body-container">
+    <div id="header">
+      <h1>Hello,my name is Yao-Ting Yao!</h1>
+    </div>
+    <div id="profile-picture">
+      <img src="images/profile-picture.jpg" width="500px", height="500px" />
+    </div>
+    <div id="welcom-text">
+      Welcome to my webpage.<br>
+      I am a student in the
+      <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
+      <a href="https://www.clarku.edu/">Clark University</a>.
+    </div>
+    <div id="research-Interests">
+     <h3>Research Interests</h3>
+     <ul>
+       <li>Image Classification</li>
+       <li>Deep Learning</li>
+       <li>Spatial Databases</li>
+     </ul>
+    </div>
+  </div>
 </BODY>
 </HTML>
