Added styling in main_style.css. And change profile-picture.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <BODY>
   <div id="body-container">
     <div id="header">
-      <h1>Hello,my name is Yao-Ting Yao!</h1>
+      <h1>Hello, my name is Yao-Ting Yao!</h1>
     </div>
     <div id="profile-picture">
-      <img src="images/profile-picture.jpg" width="500px", height="500px" />
+      <img src="images/profile-picture.jfif" width="500px", height="500px" />
     </div>
     <div id="welcom-text">
       Welcome to my webpage.<br>
@@ -21,11 +21,11 @@
     </div>
     <div id="research-Interests">
      <h3>Research Interests</h3>
-     <ul>
+     <ol>
        <li>Image Classification</li>
        <li>Deep Learning</li>
        <li>Spatial Databases</li>
-     </ul>
+     </ol>
     </div>
   </div>
 </BODY>
