Edited index.html and css file.

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
       Welcome to my webpage.<br>
       I am a student in the
       <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
-      <a href="https://www.clarku.edu/">Clark University</a>.
+      <a href="https://www.clarku.edu/">Clark University</a>
     </div>
     <div id="research-Interests">
      <h3>Research Interests</h3>
-     <ol>
+     <ul>
        <li>Image Classification</li>
        <li>Deep Learning</li>
        <li>Spatial Databases</li>
-     </ol>
+     </ul>
+    </div>
+    <div id="footer">
+      © 2022 by Yao-Ting Yao
     </div>
   </div>
 </BODY>
