--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <HTML>
 <HEAD>
   <TITLE> Yao-Ting Yao</TITLE>
-  <!--All styling for this HTML document are contained in this external css dile-->
+<!--All styling for this HTML document are contained in this external css dile-->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
+  <div>
+  <script src="javascript/external.js"></script>
+</div>
 </HEAD>
 <BODY>
   <div id="body-container">
-    <div id="header">
+    <div id='header'>
       <h1>Hello, my name is Yao-Ting Yao!</h1>
     </div>
     <div id="profile-picture">
-      <img src="images/profile-picture.jfif" width="500px", height="500px" />
+      <img src="images/profile-picture.jfif" width="500px" height="500px" />
     </div>
     <div id="welcom-text">
       Welcome to my webpage.<br>
