--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <BODY>
   <div id="body-container">
     <div id='header'>
-      <h1>Hello, my name is Yao-Ting Yao!</h1>
+
+      <h1>Hello, Welcome to my webpage,
+      <script>
+      document.write(user_name +'!');
+      </script>
+      </h1>
     </div>
     <div id="profile-picture">
       <img src="images/profile-picture.jfif" width="500px" height="500px" />
     </div>
     <div id="welcom-text">
+      My name is Yao-Ting Yao!<br>
       Welcome to my webpage.<br>
       I am a student in the
       <a href="https://www.clarku.edu/schools/idce/">IDCE Department</a> at
