Executed the welcome function in external.js from an internal script.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
 <!--All styling for this HTML document are contained in this external css dile-->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
   <div>
+  <script src="javascript/external.js"></script>
+  <script>
+	document.write(welcome());
+	</script>
 
-</div>
+  </div>
 </HEAD>
 
 <BODY>
   <div id="body-container">
     <div id='header'>
-      <script src="javascript/external.js">
-      </script>
+
       </h1>
     </div>
     <div id="profile-picture">
