Filled content from web maps array into the web maps table.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      </ul>
     </div>
     <div id="webmap-reviews">
-      Webmap Reviews
+    <h3>Webmap Reviews</h3>
       <script>
           webmap_table()
       </script>
