--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
           webmap_table()
       </script>
     </div>
+    
+    <div id="form">
+        <h3>Input length and width of a rectangle:</h3>
+        <form>
+        Length:   <input id="length"><br />
+        Width:   <input id="width"><br />
+        <p><b>Rectangle Area:</b></p><p id="output"><b></b></p>
+        <button type='button'id="button"> Calculate! </buttom>
 
+        </form>
+    </div>
 
     <div id="copyright">
       <script>
