--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML>
 <HTML>
 <HEAD>
+<meta charset="utf-8" I>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="      crossorigin=""/>
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+     integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+     crossorigin=""></script>
+<script src=”javascript/secret_keys.js”></script>
+
   <TITLE> Yao-Ting Yao</TITLE>
 <!--All styling for this HTML document are contained in this external css dile-->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
@@ -42,7 +50,7 @@
           webmap_table()
       </script>
     </div>
-    
+
     <div id="form">
         <h3>Input length and width of a rectangle:</h3>
         <form>
@@ -52,6 +60,24 @@
         <button type='button'id="button"> Calculate! </buttom>
 
         </form>
+    </div>
+
+    <h3>My First Webmap</h3>
+
+    <div id="mapid" style="width: 600px; height: 400px; margin: auto;">
+
+      <script>
+
+        var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}',{
+            maxZoom: 18,
+            id: 'mapbox/streets-v11',
+            accessToken:'pk.eyJ1IjoieWFvdGluZyIsImEiOiJjbDlpbGh4d2MwbWxlM29tZXV6OWY2eGhhIn0.ynGpNmV2r51q1n9kkj7jnQ',
+        }).addTo(mymap);
+
+
+      </script>
     </div>
 
     <div id="copyright">
