Added a Leaflet webmap with a Mapbox tile layer and .ignore file.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
       </script>
     </div>
-
+<div>
+<li><a href="04_Choroplet map in Leaf_Legend.html" class="button">Open up Webmap</a></li>
+</div>
     <div id="copyright">
       <script>
     // Use new Date() to create a new date object with the current date and time. Assign to variable today.
