--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <TITLE> Yao-Ting Yao</TITLE>
 <!--All styling for this HTML document are contained in this external css dile-->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
-  <link rel="stylesheet" type="text/css" href="css/map_style.css" >
+  <link rel="stylesheet" type="text/css" href="css/map_style.css">
   <script src="javascript/external.js"></script>
+//Geocoder api
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/opencagedata/leaflet-opencage-search@d4cbd36122efc8d17152b4177ed0e12165305441/dist/css/L.Control.OpenCageData.Search.min.css" />
+  <script src="https://cdn.jsdelivr.net/gh/opencagedata/leaflet-opencage-search@d4cbd36122efc8d17152b4177ed0e12165305441/dist/js/L.Control.OpenCageSearch.min.js"></script>
+  <script src="javascript/map.js"></script>
 
   <div>
     <script>
@@ -65,58 +69,12 @@
         </form>
     </div>
 
-    <h3>My First Webmap</h3>
+    <h3>Geocoding Map</h3>
 
     <div id="mapid" style="width: 600px; height: 400px; margin: auto;">
 
       <script>
-/*
-        var mymap = L.map('mapid');
-
-        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}',{
-            maxZoom: 18,
-            id: 'mapbox/satellite-streets-v11',
-            accessToken:'pk.eyJ1IjoieWFvdGluZyIsImEiOiJjbDlpbGh4d2MwbWxlM29tZXV6OWY2eGhhIn0.ynGpNmV2r51q1n9kkj7jnQ',
-        }).addTo(mymap);
-*/
-  var mymap = L.map('mapid');
-  L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {}).addTo(mymap);
-
-
-        var marker = L.marker([51.5, -0.09]).addTo(mymap);
-        var circle = L.circle([51.508, -0.11],{
-          color:'red',
-          fillColor:'#f03',
-          fillOpacity:0.5,
-          radius:500
-        }).addTo(mymap);
-
-        var polygon = L.polygon([[51.509, -0.08],[51.503,-0.06],[51.51,-0.047]]).addTo(mymap);
-        marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
-        circle.bindPopup("I am a circle.");
-        polygon.bindPopup("I am a polygon.");
-
-        marker.on('click',function(e){mymap.setView(e.latlng, 14);});
-        circle.on('click',function(e){mymap.setView(e.latlng, 13);});
-        polygon.on('click',function(e){mymap.setView(e.latlng, 13);});
-
-        var ZoomViewer = L.Control.extend({
-          onAdd: function(){
-            var gauge = L.DomUtil.create('div');
-            gauge.style.width = '200px';
-            gauge.style.background = 'rgba(225,225,225,0.5)';
-            gauge.style.textAlign = 'left';
-            mymap.on('zoomstart zoom zoomend',function(ev){
-              gauge.innerHTML = 'Zoom level: '+mymap.getZoom();
-            })
-            return gauge;
-          }
-        });
-
-        (new ZoomViewer).addTo(mymap);
-
-        mymap.setView([0,0],1);
-
+       web_map ()
       </script>
     </div>
 <div>
