--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
   <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
        crossorigin=""></script>
-  <script src=”javascript/secret_keys.js”></script>
+  <script src="javascript/secret_keys.js"></script>
 
   <TITLE> Yao-Ting Yao</TITLE>
 <!--All styling for this HTML document are contained in this external css dile-->
   <link rel="stylesheet" type="text/css" href="css/main_style.css">
   <link rel="stylesheet" type="text/css" href="css/map_style.css">
   <script src="javascript/external.js"></script>
-//Geocoder api
+  <script src="javascript/leaflet-providers.js"></script>
+
+<!-- Geocoder api -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/opencagedata/leaflet-opencage-search@d4cbd36122efc8d17152b4177ed0e12165305441/dist/css/L.Control.OpenCageData.Search.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/opencagedata/leaflet-opencage-search@d4cbd36122efc8d17152b4177ed0e12165305441/dist/js/L.Control.OpenCageSearch.min.js"></script>
   <script src="javascript/map.js"></script>
+<!-- Can not find it -->
+  <!-- <script src="/path/to/leaflet.js"></script>
+  <script src="/path/to/Leaflet.Bookmarks.min.js"></script> -->
+  <link type="text/css" rel="stylesheet" href="css/leaflet.bookmarks.css">
 
   <div>
     <script>
