Added leaflet.WorldMiniMap to the Seven Wonders of the World.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/opencagedata/leaflet-opencage-search@d4cbd36122efc8d17152b4177ed0e12165305441/dist/css/L.Control.OpenCageData.Search.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/opencagedata/leaflet-opencage-search@d4cbd36122efc8d17152b4177ed0e12165305441/dist/js/L.Control.OpenCageSearch.min.js"></script>
   <script src="javascript/map.js"></script>
-<!-- Can not find it -->
-  <!-- <script src="/path/to/leaflet.js"></script>
-  <script src="/path/to/Leaflet.Bookmarks.min.js"></script> -->
-  <link type="text/css" rel="stylesheet" href="css/leaflet.bookmarks.css">
+
+<!-- Plug in leaflet.WorldMiniMap-->
+<script src="javascript/Control.WorldMiniMap.js"></script>
 
 <!-- Plug in switchBasemap-->
 <link rel="stylesheet" type="text/css" href="css/L.switchBasemap.css">
