--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Plug in FullScreen-->
 <link rel="stylesheet" type="text/css" href="css/Control.FullScreen.css">
 <script src="javascript/Control.FullScreen.js"></script>
-
+	<a href="mobile_app.html"></a>
   <div>
     <script>
 	    document.write(welcome());
