--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Plug in FullScreen-->
 <link rel="stylesheet" type="text/css" href="css/Control.FullScreen.css">
 <script src="javascript/Control.FullScreen.js"></script>
-	<a href="mobile_app.html"></a>
+
   <div>
     <script>
 	    document.write(welcome());
@@ -91,7 +91,7 @@
     </div>
 
 <div>
-<li><a href="04_Choroplet map in Leaf_Legend.html" class="button">Open up Webmap</a></li>
+<li><a href="mobile_app.html" class="button">Open up mobile_app</a></li>
 </div>
     <div id="copyright">
       <script>
