Update index.html with dropdown menus

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
      </ul>
     </div>
 
+    <br>
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Mapping Dropdown</button>
+      <div id="myDropdown" class="dropdown-content">
+      <a href="simple_mapping.html">Simple Mapping</a>
+      <a href="tile_layer.html">Tile Layers</a>
+      <a href="dynamic_layers.html">Dynamic Layers</a>
+      <a href="on_event.html">On Event</a>
+      <a href="basemap_gallery.html">Basemap Gallery</a>
+      <a href="query_task.html">Query Task</a>
+      </div>
+    </div>
+
     <div id="webmap-reviews">
     <h3>Webmap Reviews</h3>
       <script>
@@ -89,10 +102,12 @@
        web_map()
       </script>
     </div>
-
+<br>
 <div>
-<li><a href="mobile_app.html" class="button">Open up mobile_app</a></li>
+<li><a href="mobile_app.html" class="button">Open Up Mobile App</a></li>
 </div>
+
+
     <div id="copyright">
       <script>
     // Use new Date() to create a new date object with the current date and time. Assign to variable today.
